--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 <body>
+    <header>
 
+    </header>
+
+    <main>
+    
+    </main>
+    <script src="./assets/js/lib.js"></script>
+    <script src="./assets/js/question.js"></script>
+    <script src="./assets/js/result.js"></script>
+    <script src="./assets/js/userDetail.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
